--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/AddressIp_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/AddressIp_scene.fxml
@@ -76,11 +76,23 @@
                                 <Insets bottom="20.0" />
                             </VBox.margin>
                         </TextField>
-                        <Button fx:id="tryToConnectButton" mnemonicParsing="false" onMouseClicked="#connect" prefHeight="40.0" prefWidth="250.0" styleClass="button" stylesheets="@../css/server_scene.css" text="CONNECT" textFill="WHITE">
-                            <font>
-                                <Font size="32.0" />
-                            </font>
+                  <HBox alignment="TOP_CENTER" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                              <Button fx:id="tryToConnectButton" mnemonicParsing="false" onMouseClicked="#connect" prefHeight="40.0" prefWidth="250.0" styleClass="button" stylesheets="@../css/server_scene.css" text="CONNECT" textFill="WHITE">
+                                  <font>
+                                      <Font size="32.0" />
+                                  </font>
+                           <HBox.margin>
+                              <Insets right="10.0" />
+                           </HBox.margin>
+                              </Button>
+                        <Button fx:id="tryToConnectButton1" mnemonicParsing="false" onMouseClicked="#goBack" prefHeight="40.0" prefWidth="250.0" styleClass="button" stylesheets="@../css/server_scene.css" text="BACK" textFill="WHITE">
+                           <font>
+                              <Font size="32.0" />
+                           </font>
                         </Button>
+                     </children>
+                  </HBox>
                     </children>
                     <cursor>
                         <Cursor fx:constant="DEFAULT" />
