--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/GameNameList_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/GameNameList_scene.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
@@ -37,7 +38,7 @@
                         </HBox>
                     </children>
                     <VBox.margin>
-                        <Insets bottom="60.0" />
+                        <Insets bottom="25.0" />
                     </VBox.margin>
                 </VBox>
                 <Label alignment="CENTER" prefHeight="67.0" prefWidth="588.0" text="Insert the game you want to join " textFill="WHITE">
@@ -53,13 +54,9 @@
                   <VBox fx:id="games" prefHeight="307.0" prefWidth="396.0" style="-fx-background-color: transparent;;" />
                </content>
             </ScrollPane>
-                <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+                <VBox alignment="CENTER" prefHeight="29.0" prefWidth="1510.0">
                     <children>
-                  <Label fx:id="InvalidGameChoice" alignment="CENTER" contentDisplay="RIGHT" prefHeight="36.0" prefWidth="890.0" text="There is no  available game in  the lobby with this name, please insert another name" textFill="#d73d3d" visible="false">
-                     <font>
-                        <Font name="Libian SC Regular" size="24.0" />
-                     </font>
-                  </Label>
+                  <Button alignment="TOP_LEFT" contentDisplay="CENTER" mnemonicParsing="false" onMouseClicked="#goBack" prefHeight="50.0" prefWidth="153.0" text="BACK" />
                     </children>
                 </VBox>
                 <VBox alignment="BOTTOM_CENTER" prefHeight="301.0" prefWidth="1510.0">
