--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/GameName_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/GameName_scene.fxml
@@ -57,11 +57,23 @@
                         <Font size="21.0" />
                     </font>
                 </TextField>
-                <Button fx:id="ok" mnemonicParsing="false" onMouseClicked="#gameNameChosen" prefHeight="59.0" prefWidth="156.0" styleClass="button" stylesheets="@../css/server_scene.css" text="OK" textFill="WHITE">
-                    <font>
+            <HBox alignment="TOP_CENTER" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                      <Button fx:id="ok" alignment="TOP_CENTER" mnemonicParsing="false" onMouseClicked="#gameNameChosen" prefHeight="59.0" prefWidth="156.0" styleClass="button" stylesheets="@../css/server_scene.css" text="OK" textFill="WHITE">
+                          <font>
+                              <Font size="28.0" />
+                          </font>
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
+                      </Button>
+                  <Button fx:id="ok1" mnemonicParsing="false" onMouseClicked="#goBack" prefHeight="59.0" prefWidth="156.0" styleClass="button" stylesheets="@../css/server_scene.css" text="BACK" textFill="WHITE">
+                     <font>
                         <Font size="28.0" />
-                    </font>
-                </Button>
+                     </font>
+                  </Button>
+               </children>
+            </HBox>
                 <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                     <children>
                         <Label fx:id="alreadyTakenGameName" text="Invalid game name, please choose another one" textFill="#e84646" visible="false">
