minor gui fixes

--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/css/start_scene.css
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/css/start_scene.css
@@ -1,4 +1,13 @@
+
+
+
+.label {
+    -fx-font-family: 'LillyBelle';
+}
+
+
 .rootPane {
+    -fx-font-family: 'LillyBelle';
     -fx-background-image: url("../Publisher_material/Display_5.jpg");
     -fx-background-size: stretch;
 }
@@ -50,6 +59,5 @@
 .joinBtn:hover {
     -fx-effect: dropshadow(gaussian, #f2e0d6, 20, 0.3, 0, 0);
     -fx-cursor: hand;
-
 
 }
