--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/livingBoard_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/livingBoard_scene.fxml
@@ -14,6 +14,7 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
@@ -24,7 +25,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<?import javafx.scene.layout.Pane?>
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="908.0" prefWidth="1510.0" styleClass="rootPane" stylesheets="@../css/livingBoard_scene.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.view.FXML.LivingBoardController">
     <children>
       <AnchorPane fx:id="PaneForPopup" prefHeight="823.0" prefWidth="1437.0" visible="false">
@@ -40,7 +40,6 @@
             </Pane>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="PaneForPopup" prefHeight="823.0" prefWidth="1437.0" visible="false" />
         <BorderPane prefHeight="908.0" prefWidth="1510.0" style="-fx-border-width: 10;">
             <center>
                 <Group BorderPane.alignment="CENTER">
@@ -76,20 +75,12 @@
                                 </GridPane>
                                 <StackPane layoutX="517.0" layoutY="460.0" prefHeight="61.0" prefWidth="64.0" rotate="7.6">
                                     <children>
-                                        <ImageView fitHeight="65.0" fitWidth="62.0" pickOnBounds="true" preserveRatio="true">
-                                            <image>
-                                                <Image url="@../scoring%20tokens/end%20game.jpg" />
-                                            </image>
-                                        </ImageView>
+                                        <ImageView fitHeight="65.0" fitWidth="62.0" pickOnBounds="true" preserveRatio="true"></ImageView>
                                     </children>
                                 </StackPane>
                                 <AnchorPane fx:id="anchorPaneForTheCandPGoalCards" layoutX="12.0" layoutY="105.0" prefHeight="453.0" prefWidth="609.0" visible="false">
                                     <children>
-                                        <ImageView fx:id="CommonGoalAchieved" fitHeight="431.0" fitWidth="499.0" layoutX="69.0" layoutY="-10.0" visible="false">
-                                            <image>
-                                                <Image url="@../scoring%20tokens/scoring_back_EMPTY.jpg" />
-                                            </image>
-                                        </ImageView>
+                                        <ImageView fx:id="CommonGoalAchieved" fitHeight="431.0" fitWidth="499.0" layoutX="69.0" layoutY="-10.0" visible="false"></ImageView>
                                         <Text fx:id="CommonGoalText" fill="#e8c77acf" layoutX="158.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Congratulations you have reached the first/second common goal! You will now receive a scoring token.. Keep it up!" visible="false" wrappingWidth="344.74981689453125">
                                             <font>
                                                 <Font name="Libian SC Regular" size="36.0" />
@@ -210,11 +201,7 @@
                             <children>
                                 <AnchorPane prefHeight="274.0" prefWidth="388.0">
                                     <children>
-                                        <ImageView fx:id="commonGoalCard1" fitHeight="175.0" fitWidth="274.0" layoutX="61.0" layoutY="47.0" pickOnBounds="true" preserveRatio="true">
-                                            <image>
-                                                <Image url="@../common%20goal%20cards/12.jpg" />
-                                            </image>
-                                        </ImageView>
+                                        <ImageView fx:id="commonGoalCard1" fitHeight="175.0" fitWidth="274.0" layoutX="61.0" layoutY="47.0" pickOnBounds="true" preserveRatio="true"></ImageView>
                                         <StackPane layoutX="219.0" layoutY="95.0" prefHeight="74.0" prefWidth="69.0" rotate="-81.5">
                                             <rotationAxis>
                                                 <Point3D z="-1.0" />
@@ -223,7 +210,7 @@
                                                 <ImageView fx:id="tokenCommonCard1" fitHeight="67.0" fitWidth="67.0" pickOnBounds="true" preserveRatio="true" rotate="-90.0" />
                                             </children>
                                         </StackPane>
-                              <TitledPane fx:id="descriptionFirstCG" layoutX="58.0" layoutY="22.0" prefHeight="211.0" prefWidth="271.0">
+                              <TitledPane fx:id="descriptionFirstCG" expanded="false" layoutX="58.0" layoutY="22.0" prefHeight="211.0" prefWidth="271.0">
                                  <content>
                                     <Text fx:id="descriptionCommonGoalCard1_text" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="CENTER" wrappingWidth="268.21630859375">
                                        <font>
@@ -248,7 +235,7 @@
                                                 <ImageView fx:id="tokenCommonCard2" fitHeight="72.0" fitWidth="72.0" pickOnBounds="true" preserveRatio="true" />
                                             </children>
                                         </StackPane>
-                              <TitledPane fx:id="descriptionSecondCG" layoutX="60.0" layoutY="21.0" prefHeight="223.0" prefWidth="266.0">
+                              <TitledPane fx:id="descriptionSecondCG" expanded="false" layoutX="60.0" layoutY="21.0" prefHeight="223.0" prefWidth="266.0">
                                  <content>
                                     <Text fx:id="descriptionCommonGoalCard2_text" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="CENTER" wrappingWidth="264.21630859375">
                                        <font>
@@ -358,15 +345,11 @@
                                             </children>
                                         </Group>
                                     </children></AnchorPane>
-                                <ImageView fx:id="personalCard" fitHeight="245.0" fitWidth="163.0" layoutX="179.0" layoutY="537.0">
-                                    <image>
-                                        <Image url="@../personal%20goal%20cards/Personal_Goals3.png" />
-                                    </image>
-                                </ImageView>
+                                <ImageView fx:id="personalCard" fitHeight="245.0" fitWidth="163.0" layoutX="179.0" layoutY="537.0"></ImageView>
                         <ImageView fx:id="tokenCommonGoalCard1" fitHeight="67.0" fitWidth="67.0" layoutX="93.0" layoutY="518.0" pickOnBounds="true" preserveRatio="true" />
                         <ImageView fx:id="tokenCommonGoalCard2" fitHeight="67.0" fitWidth="67.0" layoutX="93.0" layoutY="596.0" pickOnBounds="true" preserveRatio="true" />
                         <ImageView fx:id="seatToken" fitHeight="67.0" fitWidth="67.0" layoutX="93.0" layoutY="685.0" pickOnBounds="true" preserveRatio="true" />
-                        <TitledPane animated="false" layoutX="179.0" layoutY="510.0" prefHeight="273.0" prefWidth="164.0" text="Personal Goal Card">
+                        <TitledPane animated="false" expanded="false" layoutX="179.0" layoutY="510.0" prefHeight="273.0" prefWidth="164.0" text="Personal Goal Card">
                           <content>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
