--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/css/gameNameList_scene.css
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/css/gameNameList_scene.css
@@ -4,6 +4,11 @@
     -fx-background-size: stretch;
 }
 
+.Text {
+    -fx-font-family: 'LillyBelle';
+    -fx-text-fill: #451616;
+}
+
 .button {
     -fx-background-image: url("../misc/base_pagina2.jpg");
     -fx-text-fill: white;
