--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/AddressIp_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/AddressIp_scene.fxml
@@ -48,9 +48,6 @@
                 <VBox alignment="CENTER" prefHeight="282.0" prefWidth="1510.0">
                     <children>
                         <Label alignment="CENTER" prefHeight="54.0" prefWidth="330.0" text="IP" textFill="WHITE" styleClass="Text" >
-                            <font>
-                                <Font name="Libian SC Regular" size="36.0" />
-                            </font>
                             <VBox.margin>
                                 <Insets />
                             </VBox.margin>
@@ -63,33 +60,21 @@
                                 <Font size="30.0" />
                             </font>
                         </TextField>
-                        <Label alignment="CENTER" prefHeight="54.0" prefWidth="330.0" text="PORT" textFill="WHITE">
-                            <font>
-                                <Font name="Libian SC Regular" size="36.0" />
-                            </font>
+                        <Label alignment="CENTER" prefHeight="54.0" prefWidth="330.0" text="PORT" textFill="WHITE" styleClass="Text">
                         </Label>
                         <TextField fx:id="port" alignment="CENTER" maxWidth="-Infinity" prefHeight="49.0" prefWidth="300.0" promptText="1243" styleClass="rounded-input" stylesheets="@../css/server_scene.css">
-                            <font>
-                                <Font size="30.0" />
-                            </font>
                             <VBox.margin>
                                 <Insets bottom="20.0" />
                             </VBox.margin>
                         </TextField>
                   <HBox alignment="TOP_CENTER" prefHeight="100.0" prefWidth="200.0">
                      <children>
-                              <Button fx:id="tryToConnectButton" mnemonicParsing="false" onMouseClicked="#connect" prefHeight="40.0" prefWidth="250.0" styleClass="button" stylesheets="@../css/server_scene.css" text="CONNECT" textFill="WHITE">
-                                  <font>
-                                      <Font size="32.0" />
-                                  </font>
+                              <Button fx:id="tryToConnectButton" mnemonicParsing="false" onMouseClicked="#connect" prefHeight="40.0" prefWidth="250.0" styleClass="button" stylesheets="@../css/server_scene.css" text="CONNECT" >
                            <HBox.margin>
                               <Insets right="10.0" />
                            </HBox.margin>
                               </Button>
-                        <Button fx:id="tryToConnectButton1" mnemonicParsing="false" onMouseClicked="#goBack" prefHeight="40.0" prefWidth="250.0" styleClass="button" stylesheets="@../css/server_scene.css" text="BACK" textFill="WHITE">
-                           <font>
-                              <Font size="32.0" />
-                           </font>
+                        <Button fx:id="tryToConnectButton1" mnemonicParsing="false" onMouseClicked="#goBack" prefHeight="40.0" prefWidth="250.0" styleClass="button" stylesheets="@../css/server_scene.css" text="BACK">
                         </Button>
                      </children>
                   </HBox>
@@ -99,13 +84,6 @@
                     </cursor>
                 </VBox>
                 <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
-                    <children>
-                        <Label fx:id="InvalidNickname" text="Invalid nickname, please choose another one" textFill="#e84646" visible="false">
-                            <font>
-                                <Font name="Libian SC Regular" size="64.0" />
-                            </font>
-                        </Label>
-                    </children>
                 </VBox>
                 <VBox alignment="BOTTOM_CENTER" prefHeight="301.0" prefWidth="1510.0">
                     <children>
