--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/GameName_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/GameName_scene.fxml
@@ -41,10 +41,7 @@
                         <Insets bottom="60.0" />
                     </VBox.margin>
                 </VBox>
-                <Label prefHeight="28.0" prefWidth="397.0" text="Choose a name for your game" textFill="WHITE">
-                    <font>
-                        <Font name="Libian SC Regular" size="36.0" />
-                    </font>
+                <Label prefHeight="28.0" prefWidth="397.0" text="CHOOSE A NAME FOR YOUR GAME" styleClass="SmallerText">
                     <VBox.margin>
                         <Insets bottom="20.0" />
                     </VBox.margin>
@@ -76,7 +73,7 @@
             </HBox>
                 <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                     <children>
-                        <Label fx:id="alreadyTakenGameName" text="Invalid game name, please choose another one" textFill="#e84646" visible="false">
+                        <Label fx:id="alreadyTakenGameName" text="INVALID GAME NAME, PLEASE CHOOSE ANOTHER ONE" stylesheets="@../css/globalErrorMessage.css" styleClass="Text"  visible="false">
                             <font>
                                 <Font name="Libian SC Regular" size="64.0" />
                             </font>
