--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/NumberofPlayers_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/NumberofPlayers_scene.fxml
@@ -42,10 +42,7 @@
                         <Insets bottom="60.0" />
                     </VBox.margin>
                 </VBox>
-                <Label alignment="CENTER" prefHeight="53.0" prefWidth="549.0" text="Choose the number of players" textFill="WHITE">
-                    <font>
-                        <Font name="Libian SC Regular" size="36.0" />
-                    </font>
+                <Label alignment="CENTER" prefHeight="53.0" prefWidth="549.0" text="CHOOSE THE NUMBER OF PLAYERS" textFill="WHITE" styleClass="Text">
                     <VBox.margin>
                         <Insets bottom="40.0" />
                     </VBox.margin>
@@ -54,10 +51,7 @@
                     <children>
                         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                             <children>
-                                <RadioButton fx:id="twoPlayers" mnemonicParsing="false" prefHeight="40.0" text="2" textFill="WHITE">
-                                    <font>
-                                        <Font size="25.0" />
-                                    </font>
+                                <RadioButton fx:id="twoPlayers" mnemonicParsing="false" prefHeight="40.0" text="2" styleClass="Text">
                                     <HBox.margin>
                                         <Insets right="50.0" />
                                     </HBox.margin>
@@ -65,18 +59,12 @@
                                         <ToggleGroup fx:id="numbers" />
                                     </toggleGroup>
                                 </RadioButton>
-                                <RadioButton fx:id="threePlayers" mnemonicParsing="false" prefHeight="40.0" text="3" textFill="WHITE" toggleGroup="$numbers">
-                                    <font>
-                                        <Font size="25.0" />
-                                    </font>
+                                <RadioButton fx:id="threePlayers" mnemonicParsing="false" prefHeight="40.0" text="3" styleClass="Text"  toggleGroup="$numbers">
                                     <HBox.margin>
                                         <Insets right="50.0" />
                                     </HBox.margin>
                                 </RadioButton>
-                                <RadioButton fx:id="fourPlayers" mnemonicParsing="false" prefHeight="40.0" text="4" textFill="WHITE" toggleGroup="$numbers">
-                                    <font>
-                                        <Font size="25.0" />
-                                    </font>
+                                <RadioButton fx:id="fourPlayers" mnemonicParsing="false" prefHeight="40.0" text="4" styleClass="Text" toggleGroup="$numbers">
                                 </RadioButton>
                             </children>
                             <VBox.margin>
@@ -84,13 +72,18 @@
                             </VBox.margin>
                         </HBox>
                         <Button fx:id="okButton" mnemonicParsing="false" onMouseClicked="#numberOfPlayerChosen" prefHeight="56.0" prefWidth="157.0" stylesheets="@../css/server_scene.css" text="OK" textFill="WHITE">
-                            <font>
-                                <Font size="26.0" />
-                            </font>
                             <VBox.margin>
                                 <Insets top="10.0" />
                             </VBox.margin>
                         </Button>
+                        <Label fx:id="missingNumberLabel" text="PLEASE CHOOSE THE NUMBER OF PLAYERS BEFORE ENTER" textFill="#d02d2d" visible="false">
+                            <font>
+                                <Font size="24.0" />
+                            </font>
+                            <VBox.margin>
+                                <Insets top="20.0" />
+                            </VBox.margin>
+                        </Label>
                     </children>
                 </VBox>
                 <VBox alignment="BOTTOM_CENTER" prefHeight="301.0" prefWidth="1510.0">
