--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/RMIorSocket_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/RMIorSocket_scene.fxml
@@ -42,10 +42,7 @@
                         <Insets bottom="60.0" />
                     </VBox.margin>
                 </VBox>
-                <Label alignment="CENTER" prefHeight="53.0" prefWidth="464.0" text="Choose a connection type" textFill="WHITE">
-                    <font>
-                        <Font name="Libian SC Regular" size="36.0" />
-                    </font>
+                <Label alignment="CENTER" prefHeight="53.0" prefWidth="464.0" text="CHOOSE A CONNECTION TYPE" textFill="WHITE" styleClass="Text">
                     <VBox.margin>
                         <Insets bottom="20.0" />
                     </VBox.margin>
@@ -54,10 +51,7 @@
                     <children>
                         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                             <children>
-                                <RadioButton fx:id="TCP_button" mnemonicParsing="false" prefHeight="40.0" text="TCP (socket)" textFill="WHITE">
-                                    <font>
-                                        <Font size="25.0" />
-                                    </font>
+                                <RadioButton fx:id="TCP_button" mnemonicParsing="false" prefHeight="40.0" text="TCP (socket)" textFill="WHITE" styleClass="radio-button">
                                     <toggleGroup>
                                         <ToggleGroup fx:id="connectionType" />
                                     </toggleGroup>
@@ -65,10 +59,7 @@
                                         <Insets right="50.0" />
                                     </HBox.margin>
                                 </RadioButton>
-                                <RadioButton fx:id="RMI_button" mnemonicParsing="false" prefHeight="40.0" text="RMI" textFill="WHITE" toggleGroup="$connectionType">
-                                    <font>
-                                        <Font size="25.0" />
-                                    </font>
+                                <RadioButton fx:id="RMI_button" mnemonicParsing="false" prefHeight="40.0" text="RMI" textFill="WHITE" toggleGroup="$connectionType" styleClass="radio-button">
                                     <HBox.margin>
                                         <Insets />
                                     </HBox.margin>
@@ -80,7 +71,7 @@
                         </HBox>
                   <HBox alignment="TOP_CENTER" prefHeight="60.0" prefWidth="200.0">
                      <children>
-                        <Button fx:id="okButton" mnemonicParsing="false" onMouseClicked="#createConnection" prefHeight="56.0" prefWidth="157.0" stylesheets="@../css/server_scene.css" text="OK" textFill="WHITE">
+                        <Button fx:id="okButton" mnemonicParsing="false" onMouseClicked="#createConnection" prefHeight="56.0" prefWidth="157.0" styleClass="button" text="OK" textFill="WHITE">
                            <font>
                               <Font size="26.0" />
                            </font>
@@ -88,10 +79,7 @@
                               <Insets right="20.0" />
                            </HBox.margin>
                         </Button>
-                        <Button fx:id="backButton" mnemonicParsing="false" onMouseClicked="#goBack" prefHeight="56.0" prefWidth="157.0" stylesheets="@../css/server_scene.css" text="BACK" textFill="WHITE">
-                           <font>
-                              <Font size="26.0" />
-                           </font>
+                        <Button fx:id="backButton" mnemonicParsing="false" onMouseClicked="#goBack" prefHeight="56.0" prefWidth="157.0" styleClass="button"  text="BACK" textFill="WHITE">
                         </Button>
                      </children>
                   </HBox>
