--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/login_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/login_scene.fxml
@@ -41,10 +41,7 @@
                   <Insets bottom="60.0" />
                </VBox.margin>
             </VBox>
-                  <Label prefHeight="54.0" prefWidth="330.0" text="Choose a Nickname" textFill="WHITE">
-                      <font>
-                          <Font name="Libian SC Regular" size="36.0" />
-                      </font>
+                  <Label prefHeight="54.0" prefWidth="330.0" text="CHOOSE A NICKNAME" textFill="WHITE" stylesheets="@../css/login_scene.css">
                <VBox.margin>
                   <Insets bottom="20.0" />
                </VBox.margin>
@@ -57,17 +54,11 @@
                   <Font size="21.0" />
                </font>
             </TextField>
-                  <Button fx:id="OKButton" mnemonicParsing="false" onMouseClicked="#connect" prefHeight="59.0" prefWidth="156.0" styleClass="button" stylesheets="@../css/server_scene.css" text="OK" textFill="WHITE">
-                      <font>
-                          <Font size="28.0" />
-                      </font>
+                  <Button fx:id="OKButton" mnemonicParsing="false" onMouseClicked="#connect" prefHeight="59.0" prefWidth="156.0" styleClass="button" stylesheets="@../css/server_scene.css" text="OK" >
                   </Button>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                <children>
-                  <Label fx:id="InvalidNickname" text="Invalid nickname, please choose another one" textFill="#e84646" visible="false">
-                     <font>
-                        <Font name="Libian SC Regular" size="64.0" />
-                     </font>
+                  <Label fx:id="InvalidNickname" text="INVALID NICKNAME,PLEASE CHOOSE ANOTHER ONE"  stylesheets="@../css/globalErrorMessage.css" styleClass="Text" visible="false" >
                   </Label>
                </children>
             </VBox>
