--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/css/gameNameList_scene.css
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/css/gameNameList_scene.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'LillyBelle';
+    src: url("../fonts/LillyBelle.ttf");
+}
+
 
 .rootPane {
     -fx-background-image: url("../misc/sfondoparquet.jpg");
@@ -6,12 +11,14 @@
 
 .Text {
     -fx-font-family: 'LillyBelle';
-    -fx-text-fill: #451616;
+    -fx-text-fill: white;
 }
 
 .button {
     -fx-background-image: url("../misc/base_pagina2.jpg");
-    -fx-text-fill: white;
+    -fx-text-fill: linear-gradient(to bottom, #FFFFFF, #FFC0CB);
+    -fx-effect: dropshadow(gaussian, #FFB6C1, 2, 0, 0, 0);
+    -fx-font-family: 'LillyBelle';
     -fx-font-size: 30;
     -fx-alignment: center;
     -fx-border-color: transparent;
