--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/css/menu_scene.css
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/css/menu_scene.css
@@ -3,16 +3,20 @@
     src: url("../fonts/LillyBelle.ttf");
 }
 
-.rootPane {
-    -fx-background-image: url("../misc/sfondoparquet.jpg");
-    -fx-background-size: stretch;
-}
+.Text {
+    -fx-font-family: 'LillyBelle';
+    -fx-font-size: 25;
+    -fx-text-fill:#fffcfc;
 
+
+}
 
 .button {
     -fx-background-image: url("../misc/base_pagina2.jpg");
+    -fx-font-size: 16;
     -fx-text-fill: linear-gradient(to bottom, #FFFFFF, #FFC0CB);
     -fx-effect: dropshadow(gaussian, #FFB6C1, 2, 0, 0, 0);
+    -fx-font-family: 'LillyBelle';
     -fx-border-color: transparent;
     -fx-border-width: 0;
     -fx-background-radius: 0;
@@ -26,24 +30,3 @@
 
 
 }
-.label {
-    -fx-font-family: 'LillyBelle';
-    -fx-text-fill: white;
-    -fx-font-size: 30;
-}
-
-
-
-.rounded-input {
-    padding:10px;
-    border-radius:40px 999em 999em 40px;
-
-}
-
-.rounded-input:hover {
-    -fx-effect: dropshadow(gaussian, #f2e0d6, 20, 0.3, 0, 0);
-    -fx-cursor: hand;
-
-
-}
-
