--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/css/start_scene.css
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/css/start_scene.css
@@ -1,19 +1,30 @@
+@font-face {
+    font-family: 'LillyBelle';
+    src: url("../fonts/LillyBelle.ttf");
+}
 
 
 
 .label {
+    -fx-font-family: 'LillyBelle';
+    -fx-text-fill: white;
 }
 
 
 .rootPane {
+    -fx-font-family: 'LillyBelle';
     -fx-background-image: url("../Publisher_material/Display_5.jpg");
     -fx-background-size: stretch;
+    -fx-text-fill: white;
 }
 
 
 .playBtn {
     -fx-background-image: url("../misc/base_pagina2.jpg");
-
+    -fx-font-size: 40;
+    -fx-font-family: 'LillyBelle';
+    -fx-text-fill: linear-gradient(to bottom, #FFFFFF, #FFC0CB);
+    -fx-effect: dropshadow(gaussian, #FFB6C1, 2, 0, 0, 0);
     -fx-border-color: transparent;
     -fx-border-width: 0;
     -fx-background-radius: 0;
@@ -30,7 +41,10 @@
 
 .quitBtn {
     -fx-background-image: url("../misc/base_pagina2.jpg");
-
+    -fx-font-family: 'LillyBelle';
+    -fx-text-fill: linear-gradient(to bottom, #FFFFFF, #FFC0CB);
+    -fx-effect: dropshadow(gaussian, #FFB6C1, 2, 0, 0, 0);
+    -fx-font-size: 40;
     -fx-border-color: transparent;
     -fx-border-width: 0;
     -fx-border-radius: 15px;
@@ -41,12 +55,14 @@
 .quitBtn:hover {
     -fx-effect: dropshadow(gaussian, #f2e0d6, 20, 0.3, 0, 0);
     -fx-cursor: hand;
+    -fx-font-family: 'LillyBelle';
+
 }
 
 .joinBtn {
 
     fx-background-image: url("../misc/base_pagina2.jpg");
-
+    -fx-font-family: 'LillyBelle';
     -fx-border-color: transparent;
     -fx-border-width: 0;
     -fx-background-radius: 0;
@@ -58,5 +74,5 @@
 .joinBtn:hover {
     -fx-effect: dropshadow(gaussian, #f2e0d6, 20, 0.3, 0, 0);
     -fx-cursor: hand;
-
+    -fx-font-family: 'LillyBelle';
 }
